enviar reservadamente concluido, bug de renderização identificado e aguardando solução

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
             <div class="destino" onclick="mensagem(this)">
                 <div class="sub-destino">
                     <ion-icon name="lock-open"></ion-icon>
-                    <spam>
+                    <span>
                         Público
-                    </spam>
+                    </span>
                 </div>
                 <img class="check-oculto" src="img/Vector.png" alt="">
             </div>
             <div class="destino" onclick="mensagem(this)">
                 <div class="sub-destino">
                     <ion-icon name="lock-closed"></ion-icon>
-                    <spam>
+                    <span>
                         Reservadamente
-                    </spam>
+                    </span>
                 </div>
                 <img class="check-oculto" src="img/Vector.png" alt="">
             </div>
@@ -78,7 +78,7 @@
     <footer>
         <div class="escrever">
             <input class="texto" type="text" placeholder="Escreva aqui..." />
-            <spam class="enviando"></spam>
+            <span class="enviando"></span>
         </div>
         <div class="enviar-mensagem" onclick="enviarMensagem()">
             <ion-icon name="paper-plane-outline"></ion-icon>
